--- a/index.html
+++ b/index.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>The Complete Redux Book - Example Application</title>
-  </head>
-
   <body>
-    <div id="app">
-      Redux is running: <span id="counter"></span>
-    </div>
-
+    <div id="app"></div>
     <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
